[gd_scene load_steps=5 format=3 uid="uid://bqr5c8j2xk3yp"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_collision"]
size = Vector2(20, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_attack"]
size = Vector2(30, 24)

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 14
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_collision")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 22

[node name="InteractionCollision" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
monitoring = false

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource("RectangleShape2D_attack")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="DashCooldownTimer" type="Timer" parent="."]

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -100
limit_top = -500
limit_right = 100000
limit_bottom = 1000
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
volume_db = -8.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
volume_db = -3.0

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
